[gd_scene load_steps=11 format=2]

[ext_resource path="res://scene/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/game.gd" type="Script" id=3]
[ext_resource path="res://font/pricedown bl.otf" type="DynamicFontData" id=4]
[ext_resource path="res://music/alex-productions-epic-cinematic-gaming-cyberpunk-reset.mp3" type="AudioStream" id=5]
[ext_resource path="res://music/mixkit-short-laser-gun-shot-1670.wav" type="AudioStream" id=6]
[ext_resource path="res://scene/setting.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=3]
size = 30
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="game" type="Node2D"]
script = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 505, 258 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="atas" parent="." instance=ExtResource( 2 )]
position = Vector2( -1, -19 )

[node name="bawah" parent="." instance=ExtResource( 2 )]
position = Vector2( 6, 616 )

[node name="kiri" parent="." instance=ExtResource( 2 )]
position = Vector2( -18, -140 )
rotation = 1.5708

[node name="kanan" parent="." instance=ExtResource( 2 )]
position = Vector2( 1043, -145 )
rotation = 1.5708

[node name="TITLE" type="RichTextLabel" parent="."]
margin_left = 448.0
margin_top = 150.0
margin_right = 598.0
margin_bottom = 191.0
custom_fonts/normal_font = SubResource( 3 )
text = "Blok Wars"

[node name="KILL" type="RichTextLabel" parent="."]
margin_left = 488.0
margin_top = 20.0
margin_right = 544.0
margin_bottom = 61.0
custom_fonts/normal_font = SubResource( 3 )
text = "KILL"

[node name="Button" type="Button" parent="."]
margin_left = 408.0
margin_top = 330.0
margin_right = 646.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 1 )
text = "PLAY"

[node name="Button2" type="Button" parent="."]
margin_left = 409.0
margin_top = 404.0
margin_right = 647.0
margin_bottom = 446.0
custom_fonts/font = SubResource( 1 )
text = "SETTING"

[node name="SCORE" type="LineEdit" parent="."]
margin_left = 459.0
margin_top = 62.0
margin_right = 570.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
align = 1
editable = false

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Control" parent="." instance=ExtResource( 7 )]
margin_left = -987.0
margin_top = 61.0
margin_right = -987.0
margin_bottom = 61.0

[node name="Button3" type="Button" parent="."]
margin_left = -307.0
margin_top = 530.0
margin_right = -104.0
margin_bottom = 550.0
text = "BAck"

[connection signal="mulai" from="." to="player" method="_on_game_mulai"]
[connection signal="mati" from="player" to="." method="_on_player_mati"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="sfx" from="Control" to="player" method="_on_Control_sfx"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
